# chembl-search

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  aggregate.awk  build.rs  filter.awk  fingerprint.sh  fingerprint.toml  missing.py  opt.html  process.sh  refilter.py  run.sh  search.cpp  search.py  status.awk  status.org  t18a.smiles  td.html  test_search.py  tester.cpp  tester.py  try.html  visualize.py  want.params  want.smirks
benches/: recap.rs
css/: base.css
input/: tm.v2.offxml  want.lexie  want.nci  want.params  want.smirks
output/: t100.html  t101.html  t102.html  t103.html  t112.html  t113.html  t115h.html  t116i.html  t116j.html  t118h.html  t119h.html  t12.html  t120h.html  t122g.html  t122i.html  t122j.html  t122l.html  t123a.html  t124.html  t125.html  t126.html  t128.html  t130h.html  t130i.html  t132h.html  t133g.html  t133h.html  t133i.html  t133j.html  t134.html  t135.html  t136.html  t138a.html  t141.html  t141a.html  t141b.html  t141c.html  t142h.html  t142j.html  t142k.html  (+43 more)
output/nci/: t132i.html  t132i.smiles  t143i.html  t143i.smiles
python/: aggregate.py  check_coverage.py  common.py  deduplicate-fragments.py  draw.py  fragment-on-rotatable-bonds.py  generate-fragments.py  recap.py  search.py  test_find_matches.py  visualize.py
rsearch/: Cargo.toml
rsearch/src/: lib.rs  main.rs  out.smiles
scripts/: count.awk  cover_filter.awk  process.sh  slow.awk
src/: cluster.rs  lib.rs  main.rs  matrix.rs  rdkit.rs  utils.rs
src/rdkit/: fragment.rs
templates/: index.html  param.html
testfiles/: t18b.smiles
