[package]
name = "rsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkit-sys = { path = "../../Projects/rdkit-sys" }
openff-toolkit = { path = "../rust/coprelos/openff-toolkit" }
openff-qcsubmit = { path = "../rust/coprelos/openff-qcsubmit" }
bitflags = "2.4.1"
rayon = "1.8.0"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
