[package]
name = "rsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkit-sys = { path = "../../Projects/rdkit-sys" }
rdkit-rs = { path = "../../Projects/rdkit-rs" }
openff-toolkit = { path = "../rust/coprelos/openff-toolkit" }
openff-qcsubmit = { path = "../rust/coprelos/openff-qcsubmit" }
bitflags = "2.4.1"
rayon = "1.8.0"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.1"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
askama = "0.12.1"

[dev-dependencies]
approx = "0.5.1"
divan = "0.1.13"

[[bench]]
name = "recap"
harness = false
